--- a/blog-details.html
+++ b/blog-details.html
@@ -256,19 +256,25 @@
             </h3>
             <div class="th-widget-contact">
               <div class="th-social style-mask">
-                <a class="facebook" href="https://www.facebook.com/"
+                <a
+                  class="facebook"
+                  href="https://www.facebook.com/profile.php?id=61558653616701"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a class="twitter" href="https://www.twitter.com/"
+                <a class="twitter" href="https://twitter.com/birdfly_org"
                   ><img
                     src="assets/img/icon/x-twitter-icon.svg"
                     alt="icon" /></a
-                ><a class="instagram" href="https://www.instagram.com/"
+                ><a
+                  class="instagram"
+                  href="https://www.instagram.com/birdfly.mining?igsh=eXlldDR6MXUwb25h"
                   ><img
                     src="assets/img/icon/instagram-icon.svg"
                     alt="icon"
                   /> </a
-                ><a class="linkedin" href="https://www.linkedin.com/"
+                ><a
+                  class="linkedin"
+                  href="https://www.linkedin.com/company/birdfly/?viewAsMember=true"
                   ><i class="fab fa-linkedin"></i
                 ></a>
                 <a class="google-play" href="https://www.google.com/"
@@ -688,15 +694,18 @@
                     <div class="col-md-auto text-xl-end">
                       <div class="th-social style3 align-items-center">
                         <span class="share-links-title">Share:</span>
-                        <a class="facebook" href="https://www.facebook.com/"
+                        <a
+                          class="facebook"
+                          href="https://www.facebook.com/profile.php?id=61558653616701"
                           ><span><i class="fab fa-facebook-f"></i></span
                         ></a>
-                        <a href="https://www.twitter.com/"
+                        <a href="https://twitter.com/birdfly_org"
                           ><span
                             ><img
                               src="assets/img/icon/x-twitter-icon.svg"
                               alt="img" /></span></a
-                        ><a href="https://www.instagram.com/"
+                        ><a
+                          href="https://www.instagram.com/birdfly.mining?igsh=eXlldDR6MXUwb25h"
                           ><span
                             ><img
                               src="assets/img/icon/instagram-icon.svg"
@@ -725,16 +734,19 @@
                   </div>
                   <div class="media-body">
                     <div class="th-social style2 align-items-center">
-                      <a href="https://www.facebook.com/"
+                      <a
+                        href="https://www.facebook.com/profile.php?id=61558653616701"
                         ><i class="fab fa-facebook-f"></i
                       ></a>
-                      <a href="https://www.twitter.com/"
+                      <a href="https://twitter.com/birdfly_org"
                         ><i class="fab fa-twitter"></i
                       ></a>
-                      <a href="https://www.linkedin.com/"
+                      <a
+                        href="https://www.linkedin.com/company/birdfly/?viewAsMember=true"
                         ><i class="fab fa-linkedin-in"></i
                       ></a>
-                      <a href="https://www.instagram.com/"
+                      <a
+                        href="https://www.instagram.com/birdfly.mining?igsh=eXlldDR6MXUwb25h"
                         ><i class="fab fa-instagram"></i
                       ></a>
                     </div>
@@ -1052,15 +1064,21 @@
                 </h3>
                 <div class="th-widget-contact">
                   <div class="th-social style-mask">
-                    <a class="facebook" href="https://www.facebook.com/"
+                    <a
+                      class="facebook"
+                      href="https://www.facebook.com/profile.php?id=61558653616701"
                       ><i class="fab fa-facebook-f"></i
                     ></a>
-                    <a class="twitter" href="https://www.twitter.com/"
+                    <a class="twitter" href="https://twitter.com/birdfly_org"
                       ><i class="fab fa-twitter"></i
                     ></a>
-                    <a class="instagram" href="https://www.instagram.com/"
+                    <a
+                      class="instagram"
+                      href="https://www.instagram.com/birdfly.mining?igsh=eXlldDR6MXUwb25h"
                       ><i class="fab fa-instagram"></i> </a
-                    ><a class="linkedin" href="https://www.linkedin.com/"
+                    ><a
+                      class="linkedin"
+                      href="https://www.linkedin.com/company/birdfly/?viewAsMember=true"
                       ><i class="fab fa-linkedin"></i
                     ></a>
                     <a class="google-play" href="https://www.google.com/"
